--- a/index.html
+++ b/index.html
@@ -37,62 +37,7 @@
     </main>
 
     <footer>
-        <div class="leftright">
-            <div class="left">
-              
-              <a
-                href="https://github.com/monkeytypegame/monkeytype"
-                class="textButton"
-                target="_blank"
-              >
-                <i class="fas fa-fw fa-code"></i>
-                <div class="text">GitHub</div>
-              </a>
-              <a
-                href="https://www.discord.gg/monkeytype"
-                class="textButton"
-                target="_blank"
-              >
-                <i class="fab fa-fw fa-discord"></i>
-                <div class="text">Discord</div>
-              </a>
-              <a
-                href="https://twitter.com/monkeytypegame"
-                class="textButton"
-                target="_blank"
-                rel="noreferrer noopener"
-              >
-                <i class="fab fa-fw fa-twitter"></i>
-                <div class="text">Twitter</div>
-              </a>
-              <a href="#" class="textButton" target="_blank">
-                <i class="fas fa-fw fa-file-contract"></i>
-                <div class="text">Terms</div>
-              </a>
-              <a href="#" class="textButton" target="_blank">
-                <i class="fas fa-fw fa-shield-alt"></i>
-                <div class="text">Security</div>
-              </a>
-              <a href="#" class="textButton" target="_blank">
-                <i class="fas fa-fw fa-lock"></i>
-                <div class="text">Privacy</div>
-              </a>
-            </div>
-            <div class="right">
-              <button
-                class="textButton"
-                id="light-mode-toggle"
-                data-balloon-pos="left"
-              >
-                <i class="fas fa-fw fa-palette"></i>
-                <div class="text" id="theme-text">serika dark</div>
-              </button>
-              <button class="textButton">
-                <i class="fas fa-fw fa-code-branch"></i>
-                <div class="text">v24.9.0</div>
-              </button>
-            </div>
-          </div>
+       <p>Created by Aayush, Binayak, Khusboo</p>
     </footer>
     <script src="typing.js"></script>
 </body>
