modified made with footer

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </main>
 
     <footer>
-       <p>Created by Aayush, Binayak, Khusboo</p>
+       <p>Made with ❤️ by Aayush, Binayak, Khusboo</p>
     </footer>
     <script src="typing.js"></script>
 </body>
