--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@
             <div id="cursor"></div>
             <div id="focus-error">Click here to focus</div>
         </div>
+
+        <!-- for end screen -->
+        <div id="end-screen" style="display: none;">
+            <h2>Game Over</h2>
+            <p>Words Per Minute: <span id="final-wpm"></span></p>
+            <p>Total Mistakes: <span id="total-mistakes"></span></p>
+            <button id="restart-btn">Play Again</button>
+        </div>
+
     </main>
 
     <footer>
