--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=yes">
     <title>TypingTester</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon/favicon.ico" type="image/x-icon">
     <style>
         /* Existing styles... */
         #start-screen, #game-screen, #end-screen {
@@ -68,6 +68,7 @@
             font-weight: bold;
             color: var(--primaryColor);
             cursor: pointer;
+            display: flex;
         }
 
         #nav-controls {
