testing the highscore feature, there are some mistakes i have found, i will look after that

--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
                 </select>
             </div>
             <button id="start-btn">Start Typing Test</button>
+            <button id="view-highscores">View Highscores</button>
         </div>
 
         <div id="game-screen">
@@ -188,6 +189,12 @@
             <p>Accuracy: <span id="final-accuracy"></span>%</p>
             <p>Total Mistakes: <span id="total-mistakes"></span></p>
             <button id="restart-btn">Play Again</button>
+            <button id="view-highscores">View Highscores</button>
+        </div>
+
+        <div id="highscores-screen">
+            <div id="highscores"></div>
+            <button id="back-to-game">Back to Game</button>
         </div>
     </main>
 
