added highscore and modified way highscore can be seen and entered in the end screen

--- a/index.html
+++ b/index.html
@@ -188,6 +188,11 @@
             <p>Words Per Minute: <span id="final-wpm"></span></p>
             <p>Accuracy: <span id="final-accuracy"></span>%</p>
             <p>Total Mistakes: <span id="total-mistakes"></span></p>
+            <div id="save-score-container">
+                <p>Congratulations! You've achieved a high score.</p>
+                <input type="text" id="highscore-name" placeholder="Enter your name">
+                <button id="save-score">Save Score</button>
+            </div>
             <button id="restart-btn">Play Again</button>
             <button id="view-highscores">View Highscores</button>
         </div>
